--- a/pages/about.html
+++ b/pages/about.html
@@ -14,7 +14,7 @@ style="
     filter: blur(4px);
 "></div>
 
-<div id="page-landing">
+<div>
     <h1>about!</h1>
     <img src="../assets/usersniper.png" width="256">
     <p>
