is this gonna fix it or

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <br>
             <p class="pagelink">stuff i made</p>
             <p class="pagelink">about meeeee</p>
+            <p class="pagelink">test</p>
         </div>
 
 
@@ -59,7 +60,8 @@
         const pagelist = [
             "landing.html",
             "stuff_i_made.html",
-            "about.html"
+            "about.html",
+            "hurb.html"
         ];
 
         const linkslist = [
